# banwords

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: linters.yml
banwords/: main.py
src/: cli.py  main.py
src/banwords/: __init__.py  cli.py  dataclasses.py  main.py  utils.py
