[project]
name = "banwords"
version = "0.1.0"
description = "Python tool. Scans project and alerts by words-list"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "logging>=0.4.9.6",
]

[build-system]
requires = ["uv_build>=0.7.22,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
banwords = "banwords.main:entry"

[tool.banwords]
wordslist = ["word1", "word2"]
