[project]
name = "banwords"
version = "0.1.0"
description = "Python tool. Scans project and alerts by words-list"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "logging>=0.4.9.6",
]

[build-system]
requires = ["uv_build>=0.7.22,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
banwords = "banwords.main:entry"

[tool.banwords]
wordslist = ["word1", "word2"]
exclude = [".venv", ".git", "__pycache__", "uv.lock", "pyproject.toml"]

[dependency-groups]
dev = [
    "codespell>=2.4.3",
    "pymarkdownlnt>=0.9.39",
    "ruff>=0.15.22",
    "ty>=0.0.62",
]

[tool.pymarkdown]
system.exclude_path = "*CHANGELOG.md"
plugins.MD013.line_length = 150

[tool.codespell]
skip="*CHANGELOG.md"